<resources>
    <string name="app_name">dice_roller</string>
    <string name="app_background">app background</string>
    <string name="dnd_dice_roller">DnD Dice Roller</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="app_title">DnD Dice Roller</string>
    <string name="background">Imagem de fundo</string>
    <string name="dado_de_4_lados">dado de 4 lados</string>
</resources>